--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@ America (art for sale)</a></li>
     </div>
 </div>
     <div align="right"><i>posted on 21/06/2020</i></div>
+            <article>
             <div class="main" >
+                <header>
             <h1 class="center">Web Engine Diversity and Ecosystem Health</h1>
+                </header>
             <p><I>For many years, we've seen lots of blog posts and conversation on the topic of "browser engine diversity". I'd like to offer a slightly tilted view of this based instead on "the health of the ecosystem", and explain why I think this is more valuable measure and way to discuss these topics.</I>></p>
             <p>Back in January, Jeremy Keith <a href=" https://adactio.com/journal/16331"> compared the complexity of browser engine diversity to political systems...</a></p>
             <p class="list_item">"If you have hundreds of different political parties, that’s not ideal. But if you only have one political party, that’s very bad indeed!"</p>
             <p>I like this analogy because I think he's right in even more ways than he intended. It's almost self-evident: 1 is too few, a hundred is too many - it's just chaos and noise. But what is the ideal number? This answer dogs us a lot, in part because it is not only unanswerable, it's actually kind of a red herring. I think there's something to this that leads to an important takeaway about how we think about the problem...</p>
+                </article>
             <h2 class="center">Numbers and goals...</h2>
             <p>The interesting part about this analogy is that the simple number of political parties isn't actually a very meaningful measure: Parties can differ a lot, or they can differ a little. 6 parties that barely disagree is quite a different thing than 3 that disagree substantially. Further, it's not simply a matter of giving voice to every dissenting opinion that matters either: There are political parties formed on ideas of hate, for example. Adding those doesn't add good things. In short, what really matters is the goal of those numbers.
                 <p>In the case of the political analogy, the real aim is about what makes for a healthy, effective and just model of governance. Similarly on the topic of "browser engine diversity", I believe that the real goal is "What makes for a healthy and effective ecosystem?" and that the numbers we frequently talk about (and how) can easily lead us into perhaps the wrong takeaways.</p>
